final one for exam

--- a/README.html
+++ b/README.html
@@ -10,13 +10,7 @@
 
 </head>
 <body class="markdown-body">
-<pre><code dir="auto"><code><div>!\[\]\(([^\)]*)\)
-&lt;center&gt;&lt;img src=&quot;$1&quot; width=400px&gt;&lt;/center&gt;
-</div></code></code></pre>
-<blockquote dir="auto">
-<p dir="auto">Why are the drawings bad?</p>
-</blockquote>
-<p dir="auto">I draw them with a mouse</p>
+<h1 dir="auto" id="ensc3016-notes-1">ENSC3016 notes</h1>
 <h3 dir="auto" id="etc-3">Etc</h3>
 <h4 dir="auto" id="first-pass-checks-1">FIRST-PASS CHECKS</h4>
 <ul dir="auto">
@@ -326,21 +320,17 @@ P_\text{mech}&amp;=P_\text{F\\\&amp;W}+P_\text{misc}+P_\text{out}
 <table dir="auto">
 <thead dir="auto">
 <tr dir="auto">
-<th>Power factor</th>
-<th>Voltage regulation</th>
+<th>PF</th>
+<th>Lagging</th>
+<th>Unity</th>
+<th>Leading</th>
 </tr>
 </thead>
 <tbody dir="auto">
 <tr dir="auto">
-<td>Lagging</td>
+<td>VR</td>
 <td>Positive</td>
-</tr>
-<tr dir="auto">
-<td>Unity</td>
 <td>Near 0</td>
-</tr>
-<tr dir="auto">
-<td>Leading</td>
 <td>Negative</td>
 </tr>
 </tbody>
